manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoever-service
  namespace: app
spec:
  selector:
    app: autoever-web
  ports:
    - protocol: TCP
      port: 80         # 서비스가 밖으로 노출할 포트
      targetPort: 5000 # 컨테이너 내부 포트 (Flask)
  type: ClusterIP
