manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoever-ingress
  namespace: app
  annotations:
    # 핵심! 이 설정들이 있어야 ALB가 만들어짐
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0a719c82b0f94b3bb, subnet-080a799dcbb5a4b58
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autoever-service # 아까 만든 서비스 이름
                port:
                  number: 80
